--- a/css/media.css
+++ b/css/media.css
@@ -14,6 +14,7 @@
         height: 50px;
     }
 }
+
 /* Медиа запрос для экранов меньше 768px */
 
 @media (max-width: 768px) {
@@ -67,6 +68,11 @@
     }
     .header__list li {
         margin: 0px 0px 20px 0px;
+        text-align: center;
+        padding-left: 0;
+    }
+    .header__link {
+        font-size: 20px;
     }
     .burger__active span {
         /* background-color: transparent; */
