--- a/css/media.css
+++ b/css/media.css
@@ -116,6 +116,12 @@
     .photodiary__coment {
         margin-bottom: 40px;
     }
+    .comment__block:last-child {
+        margin-bottom: 30px;
+    }
+    .photodiary__share {
+        margin: 40px 0px;
+    }
     /* News */
     .news {
         padding: 40px 0px 40px 0px;
@@ -144,6 +150,10 @@
     /* Btn */
     .load__btn {
         margin: 0;
+    }
+    /* Comment */
+    .comment__avatar img {
+        width: 50px;
     }
     /* Footer */
     .footer__wraper {
