--- a/css/media.css
+++ b/css/media.css
@@ -119,6 +119,9 @@
     .comment__block:last-child {
         margin-bottom: 30px;
     }
+    .comment__user {
+        margin-left: 15px;
+    }
     .photodiary__share {
         margin: 40px 0px;
     }
