--- a/css/media.css
+++ b/css/media.css
@@ -187,7 +187,7 @@
     }
     .footer__privacy {
         margin-bottom: 19px;
-        margin-inline-start: 25px;
+        margin-left: 25px;
     }
 }
 
