--- a/css/style.css
+++ b/css/style.css
@@ -523,20 +523,22 @@ img {
     color: transparent;
 }
 
+/* 
 .comment__discussin:focus:-moz-placeholder {
-    /* FF 4-18 */
+     FF 4-18 
     color: transparent;
 }
 
 .comment__discussin:focus::-moz-placeholder {
-    /* FF 19+ */
+     FF 19+ 
     color: transparent;
 }
 
 .comment__discussin:focus:-ms-input-placeholder {
-    /* IE 10+ */
+     IE 10+ 
     color: transparent;
-}
+} */
+
 .connected__icon {
     padding-left: 16px;
 }
