--- a/css/style.css
+++ b/css/style.css
@@ -510,7 +510,7 @@ img {
     border: 1px solid #EDEDEB;
 }
 
-/* Input placexolder */
+/* Input Placexolder */
 
 .comment__discussin {
     font-family: Ubuntu;
@@ -523,21 +523,20 @@ img {
     color: transparent;
 }
 
-/* 
 .comment__discussin:focus:-moz-placeholder {
-     FF 4-18 
+     /* FF 4-18  */
     color: transparent;
 }
 
 .comment__discussin:focus::-moz-placeholder {
-     FF 19+ 
+     /* FF 19+  */
     color: transparent;
 }
 
 .comment__discussin:focus:-ms-input-placeholder {
-     IE 10+ 
+     /* IE 10+  */
     color: transparent;
-} */
+} 
 
 .connected__icon {
     padding-left: 16px;
